--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@ body{
   justify-content: center;
   align-items: center;
   min-width: 100vh;
-  background: #4a4a4a;
+  background: #56425A;
   user-select: none;
 }
 
@@ -43,8 +43,8 @@ h2{
 }
 
 .reset:focus{
-  color: #ec38bc;
-  background-color: black;
+  color: #D7A5E2;
+  background-color: #2C0C33;
 }
 
 .game{
